Write Phase 2: Collection Framework through IdentityHashMap (19/19 chapters)
Completes Phase 2 Collections. Arc: the Collection/Map split (Map doesn't
extend Collection), List's index/duplicate contract, ArrayList's array
resize vs LinkedList's node traversal tradeoff, Set built on the
equals/hashCode contract from Phase 1, then the centerpiece HashMap chapter
(bucket, hash spreading, treeify), its three specialized descendants
(LinkedHashMap/LRU, TreeMap/Red-Black Tree, ConcurrentHashMap), PriorityQueue's
heap-vs-iteration-order trap, Deque, Comparable/Comparator (including the
compareTo-inconsistent-with-equals trap), Collections utility, the List.of()
generation vs Collections.unmodifiableX(), and closing with CopyOnWrite,
WeakHashMap, and IdentityHashMap.

As with Phase 1, every runnable example, benchmark, and internal-structure
claim was executed against JDK 17 first, several via Reflection with
--add-opens (a direct callback to Phase 1 Ch19/22):
- Ch03: real ArrayList capacity growth (10->15->22, confirming the 1.5x
  formula) via Reflection on elementData
- Ch04: real ArrayList vs LinkedList benchmark (get(mid): 0ms vs 883ms;
  add(0): 88ms vs 0ms)
- Ch06: real HashSet internal field proven to literally be a HashMap
- Ch08: real bucket contents via Reflection showing actual collision chains
  (apple->cherry, banana->date), real resize thresholds (16->32 at size 13,
  32->64 at size 25), and real treeification (9 colliding keys yielding an
  actual TreeNode once table >= 64)
- Ch09: real LinkedHashMap access-order LRU eviction ([1,2,3] -> [3,1,4]
  after get(1) then put(4))
- Ch11: real data-loss race on plain HashMap under 8 concurrent threads
  (74935 vs expected 400000) vs exact ConcurrentHashMap correctness
- Ch12: real PriorityQueue heap array order vs guaranteed poll() order
- Ch14: real TreeSet vs HashSet divergence when compareTo() and equals()
  disagree
- Ch15: real synchronizedList still throwing CME on unguarded iteration
- Ch16: real List.of()/Se